Fixed scrollbar gap

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,9 @@
   font-style: normal;
 }
 
+html {
+  scrollbar-gutter: stable;
+}
 
 body {
   background-color: rgb(19, 20, 24);
